--- a/MarvelApp/MarvelApp/Profile/ItemCollectionViewCell.xib
+++ b/MarvelApp/MarvelApp/Profile/ItemCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCell" id="gTV-IL-0wX" customClass="ItemCollectionViewCell" customModule="MarvelApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ItemCollectionViewCell" id="gTV-IL-0wX" customClass="ItemCollectionViewCell" customModule="MarvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="151" height="135"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -32,7 +32,7 @@
             <connections>
                 <outlet property="ivItemCell" destination="LWa-7Z-ITa" id="A0O-tL-vfh"/>
             </connections>
-            <point key="canvasLocation" x="1340" y="54"/>
+            <point key="canvasLocation" x="-286" y="34"/>
         </collectionViewCell>
     </objects>
 </document>
