--- a/MarvelApp/MarvelApp/Profile/Profile.storyboard
+++ b/MarvelApp/MarvelApp/Profile/Profile.storyboard
@@ -84,22 +84,23 @@
                                 </state>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Tpz-AS-IAH" userLabel="Profile CollectionView " customClass="ProfileViewController">
-                                <rect key="frame" x="0.0" y="263" width="414" height="550"/>
+                                <rect key="frame" x="0.0" y="259.5" width="414" height="553.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="pvF-M9-AKF">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="128" height="131"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="02B-aF-fDy">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="02B-aF-fDy">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="131"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="fIw-14-MxL">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="131"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="128" height="131"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -108,19 +109,19 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="hmN-ko-WU8" firstAttribute="trailing" secondItem="qRu-Yr-qHJ" secondAttribute="trailing" id="4nA-1j-Rci"/>
-                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="bottom" secondItem="gKn-59-HnG" secondAttribute="bottom" id="7sq-JL-i60"/>
-                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="top" secondItem="hmN-ko-WU8" secondAttribute="bottom" constant="48.329999999999998" id="BdW-J0-ND1"/>
+                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="top" secondItem="hmN-ko-WU8" secondAttribute="bottom" constant="45" id="DNg-ah-hzh"/>
                             <constraint firstItem="hmN-ko-WU8" firstAttribute="top" secondItem="5O6-hq-rJq" secondAttribute="bottom" constant="41" id="Ecr-RO-n2F"/>
-                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="trailing" secondItem="gKn-59-HnG" secondAttribute="trailing" id="HUs-h9-0sg"/>
                             <constraint firstItem="5O6-hq-rJq" firstAttribute="top" secondItem="gKn-59-HnG" secondAttribute="top" constant="17" id="JS9-qP-bAB"/>
-                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="leading" secondItem="gKn-59-HnG" secondAttribute="leading" id="Jf7-tv-shy"/>
                             <constraint firstItem="gKn-59-HnG" firstAttribute="trailing" secondItem="hmN-ko-WU8" secondAttribute="trailing" constant="52" id="XnP-t3-4Wd"/>
                             <constraint firstItem="hmN-ko-WU8" firstAttribute="leading" secondItem="7MN-zW-EHX" secondAttribute="leading" id="bqc-50-aVR"/>
                             <constraint firstItem="5O6-hq-rJq" firstAttribute="leading" secondItem="gKn-59-HnG" secondAttribute="leading" constant="52" id="edk-lN-Tsb"/>
                             <constraint firstItem="qRu-Yr-qHJ" firstAttribute="centerY" secondItem="7MN-zW-EHX" secondAttribute="centerY" id="hUd-hA-S97"/>
                             <constraint firstItem="qRu-Yr-qHJ" firstAttribute="top" secondItem="gKn-59-HnG" secondAttribute="top" constant="29" id="m6r-pX-65u"/>
+                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="bottom" secondItem="gKn-59-HnG" secondAttribute="bottom" id="nRd-HT-yz4"/>
                             <constraint firstItem="hmN-ko-WU8" firstAttribute="leading" secondItem="gKn-59-HnG" secondAttribute="leading" constant="52" id="u5S-Z2-3cd"/>
                             <constraint firstItem="qRu-Yr-qHJ" firstAttribute="leading" secondItem="5O6-hq-rJq" secondAttribute="trailing" constant="93" id="uty-S2-bV1"/>
+                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="leading" secondItem="gKn-59-HnG" secondAttribute="leading" id="vY8-el-1nB"/>
+                            <constraint firstItem="Tpz-AS-IAH" firstAttribute="trailing" secondItem="gKn-59-HnG" secondAttribute="trailing" id="vtA-xv-a6k"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" id="CGd-Or-vyz">
@@ -138,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qU2-00-vJI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="997.60000000000002" y="10.344827586206897"/>
+            <point key="canvasLocation" x="997.10144927536237" y="10.044642857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1Tp-Dl-dRN">
