--- a/MarvelApp/MarvelApp/Detail/Comics Detail/Header/TableView/HeaderComicsTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Comics Detail/Header/TableView/HeaderComicsTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderComicsTableViewCell" rowHeight="726" id="KGk-i7-Jjw" customClass="HeaderComicsTableViewCell" customModule="MarvelApp" customModuleProvider="target">
+        <tableViewCell multipleTouchEnabled="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderComicsTableViewCell" rowHeight="726" id="KGk-i7-Jjw" customClass="HeaderComicsTableViewCell" customModule="MarvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="726"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -24,17 +24,6 @@
                             <constraint firstAttribute="height" constant="246" id="qRl-cZ-1Z7"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDf-Kb-5hd">
-                        <rect key="frame" x="10" y="40" width="25" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="25" id="7vl-9l-MSJ"/>
-                            <constraint firstAttribute="height" constant="30" id="xLO-Fh-UaE"/>
-                        </constraints>
-                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal">
-                            <imageReference key="image" image="chevron.backward" catalog="system" symbolScale="large"/>
-                        </state>
-                    </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Os2-8N-1i8">
                         <rect key="frame" x="0.0" y="201" width="420" height="525"/>
                         <subviews>
@@ -208,15 +197,29 @@
                             <constraint firstItem="UIE-2P-Pe3" firstAttribute="top" secondItem="fq8-kV-Gy9" secondAttribute="bottom" constant="-36" id="vvF-0r-qiM"/>
                         </constraints>
                     </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3AU-IZ-kCX">
+                        <rect key="frame" x="16" y="50" width="46" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Ebm-15-5NQ"/>
+                            <constraint firstAttribute="width" constant="46" id="OVa-9f-daD"/>
+                        </constraints>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal">
+                            <imageReference key="image" image="chevron.left" catalog="system" symbolScale="large"/>
+                        </state>
+                        <connections>
+                            <action selector="backButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="gJc-lm-WUn"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="3AU-IZ-kCX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="50" id="BgF-1A-PT6"/>
                     <constraint firstAttribute="bottom" secondItem="Os2-8N-1i8" secondAttribute="bottom" id="FbC-CI-ZED"/>
                     <constraint firstItem="Os2-8N-1i8" firstAttribute="top" secondItem="LFd-rH-DJC" secondAttribute="bottom" constant="-45" id="SIN-3u-ugU"/>
                     <constraint firstItem="LFd-rH-DJC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="TTy-ck-A1L"/>
-                    <constraint firstItem="KDf-Kb-5hd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="Tzd-KY-hG3"/>
                     <constraint firstAttribute="trailing" secondItem="Os2-8N-1i8" secondAttribute="trailing" constant="-100" id="U9l-he-AyW"/>
                     <constraint firstItem="Os2-8N-1i8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fqd-Vh-39A"/>
-                    <constraint firstItem="KDf-Kb-5hd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="glz-2p-JIq"/>
+                    <constraint firstItem="3AU-IZ-kCX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="h2Y-5G-hGR"/>
                     <constraint firstItem="LFd-rH-DJC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uJb-lY-INz"/>
                     <constraint firstAttribute="trailing" secondItem="LFd-rH-DJC" secondAttribute="trailing" constant="-1" id="zxw-ow-uOg"/>
                 </constraints>
@@ -232,7 +235,7 @@
         <image name="Icon material-favorite" width="16" height="14"/>
         <image name="Imagem 26" width="60.5" height="69"/>
         <image name="Imagem 28" width="65" height="97"/>
-        <image name="chevron.backward" catalog="system" width="96" height="128"/>
+        <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
